--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My Render Site</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        background: #f0f0f0;
+        text-align: center;
+        padding-top: 50px;
+      }
+      h1 {
+        color: #333;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Hello, Render!</h1>
+    <p>This HTML file is served from Flask.</p>
+  </body>
+</html>
 
