--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Render Site</title>
+    <title>Kaka</title>
     <style>
       body {
         font-family: sans-serif;
