--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kaka</title>
+    <title>Su Önemi</title>
     <style>
       body {
         font-family: sans-serif;
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h1>Hello, Render!</h1>
+    <h1>Merhaba!</h1>
     <p>This HTML file is served from Flask.</p>
   </body>
 </html>
