--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <style>
       body {
         font-family: sans-serif;
-        background: #f0f0f0;
+        background: red;
         text-align: center;
         padding-top: 50px;
       }
