--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <style>
       body {
         font-family: sans-serif;
-        background: red;
+        background: 9CD7FF;
         text-align: center;
         padding-top: 50px;
       }
