--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Su Önemi</title>
-  <link rel="stylesheet" href="Classes.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='Classes.css') }}">
   <style>
     body {
       font-family: sans-serif;
