--- a/static/Classes.css
+++ b/static/Classes.css
@@ -1,1 +1,12 @@
+.title {
+  color: darkblue;
+  font-size: 24px;
+  text-align: center;
+}
 
+.paragraph {
+  color: darkblue;
+  line-height: 1.6;
+  text-align: left;
+  border: 1px solid red; 
+}
