--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,14 @@
   <title>Su Önemi</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='Classes.css') }}">
 </head>
+    <style>
+    body {
+      font-family: sans-serif;
+      background: #9CD7FF;
+      text-align: center;
+      padding-top: 50px;
+    }
+    </style>
 <body>
   <h1>Merhaba!</h1>
   <p class="paragraph">
