--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
       background: #9CD7FF;
       text-align: center;
       padding-top: 50px;
+      border: 1px #00A0FF;
     }
     </style>
 <body>
