--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
@@ -53,4 +53,6 @@
       Ancak günümüzde su kaynakları hızla tükenmekte ve kirlenmektedir. Bu nedenle suyu tasarruflu kullanmak ve temiz tutmak, 
       hem bugünkü hem de gelecek nesiller için hayati önem taşımaktadır.
     </p>
-    <img src="{{ url_for('st_
+  </div>
+</body>
+</html>
