--- a/templates/index.html
+++ b/templates/index.html
@@ -53,5 +53,8 @@
       hem bugünkü hem de gelecek nesiller için hayati önem taşımaktadır.
     </p>
   </div>
+  <div class="content">
+    <p class="paragraph">Text 2 lalalalalallalala</p>
+  </div>
 </body>
 </html>
