--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     margin: 0 auto;
     padding: 25px 20px;
     box-shadow: 0 0 100px rgba(0, 0, 0, 0.25);
-    margin-bottom: 50px; /* <-- Add this */
+    margin-bottom: 50px;
   }
     
   .content:last-of-type {
