--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,6 @@
     body {
       font-family: sans-serif;
       background-color: #9CD7FF;
-      text-align: center;
       padding-top: 50px;
       margin: 0;
     }
@@ -21,12 +20,18 @@
     margin: 0 auto;
     padding: 25px 20px;
     box-shadow: 0 0 100px rgba(0, 0, 0, 0.25);
-    margin-bottom: 50px;
+    margin-bottom: 100px;
   }
     
   .content:last-of-type {
     margin-bottom: 0;
   }
+
+  .image-container {
+    max-width: 1200px;
+    margin: 0 auto;
+   }
+
 
     h1 {
       color: #007ACC;
@@ -40,15 +45,19 @@
     }
 
     img {
-      max-width: 100%;
+      width: 100%;
       height: auto;
-      margin-top: 20px;
-      border-radius: 5px;
+      display: block;
+      margin: 0 auto;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="content" style="margin-bottom: 50px;">
+  <div class="image-container">
+    <img src="{{ url_for('static', filename='SuProjesi-Resim1.jpg') }}" alt="Su görseli" class="img">
+  </div>
+  <div class="content">
     <h1>Merhaba!</h1>
     <p class="paragraph">
       Su, yaşamın devamı için en temel ihtiyaçlardan biridir. Tüm canlıların hayatta kalabilmesi, ekosistemlerin dengede kalması ve tarım, sanayi gibi birçok insan etkinliğinin sürdürülebilmesi suya bağlıdır. 
