--- a/templates/index.html
+++ b/templates/index.html
@@ -127,7 +127,7 @@
       Ancak günümüzde su kaynakları hızla tükenmekte ve kirlenmektedir. Bu nedenle suyu tasarruflu kullanmak ve temiz tutmak, 
       hem bugünkü hem de gelecek nesiller için hayati önem taşımaktadır.
     </p>
-    <a href="#daha-fazla" class="btn">Daha Fazla Bilgi</a>
+    <a href="https://www.youtube.com/" class="btn">Daha Fazla Bilgi</a>
   </div>
 
   <div id="daha-fazla" class="content">
