--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     }
 
     .hero-background {
-      background-image: url('static/SuProjesi-Resim1.avif');
+      background-image: url('static/SuProje-Resim1.avif');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
