--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      max-height: 400px;
+      height: 400px;
       position: relative;
       display: flex;
       align-items: center;
@@ -120,7 +120,8 @@
 
   <div class="hero-background">
     <div class="overlay">Merhaba!</div>
-
+  </div>
+  
     <div class="content">
       <p class="paragraph">
         Su, yaşamın devamı için en temel ihtiyaçlardan biridir. Tüm canlıların hayatta kalabilmesi, ekosistemlerin dengede kalması ve tarım, sanayi gibi birçok insan etkinliğinin sürdürülebilmesi suya bağlıdır. 
@@ -138,7 +139,6 @@
       Suyu bilinçli kullanmak, sularımızı kirletmemek ve doğal döngüsünü korumak için herkes üzerine düşeni yapmalıdır. 
       Bu sayede gelecek nesillere temiz ve yeterli su bırakabiliriz.
     </p>
-  </div>
-
+    
 </body>
 </html>
