--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
       background-image: url('static/SuProje-Resim1.avif');
       background-repeat: repeat-x;
       background-size: auto 100%;
-      animation: scrollBackground 999999999999999999999999999999s ease-in infinite; 
+      animation: scrollBackground 60s linear infinite; 
       height: 400px;
       position: relative;
       display: flex;
