--- a/templates/index.html
+++ b/templates/index.html
@@ -150,5 +150,9 @@
     </p>
   </div>
 
+    <form action="/button-click" method="post">
+        <button type="submit">Click Me!</button>
+    </form>
+
 </body>
 </html>
