--- a/templates/index.html
+++ b/templates/index.html
@@ -139,20 +139,18 @@
       Ancak günümüzde su kaynakları hızla tükenmekte ve kirlenmektedir. Bu nedenle suyu tasarruflu kullanmak ve temiz tutmak, 
       hem bugünkü hem de gelecek nesiller için hayati önem taşımaktadır.
     </p>
-    <a href="#daha-fazla" class="btn">Daha Fazla Bilgi</a>
+    <form action="/button1-click" method="redirect">
+        <button type="submit">Click Me!</button>
+    </form>
   </div>
 
-  <div id="daha-fazla" class="content">
+  <div id="empty" class="content">
     <p class="paragraph">
       Su kaynaklarının korunması için bireysel ve toplumsal farkındalığın artırılması gerekmektedir. 
       Suyu bilinçli kullanmak, sularımızı kirletmemek ve doğal döngüsünü korumak için herkes üzerine düşeni yapmalıdır. 
       Bu sayede gelecek nesillere temiz ve yeterli su bırakabiliriz.
     </p>
   </div>
-
-    <form action="/button-click" method="post">
-        <button type="submit">Click Me!</button>
-    </form>
 
 </body>
 </html>
