--- a/templates/index.html
+++ b/templates/index.html
@@ -139,7 +139,7 @@
       Ancak günümüzde su kaynakları hızla tükenmekte ve kirlenmektedir. Bu nedenle suyu tasarruflu kullanmak ve temiz tutmak, 
       hem bugünkü hem de gelecek nesiller için hayati önem taşımaktadır.
     </p>
-    <form action="/button1-click" method="post">
+    <form action="/moreabout" method="post">
         <button type="submit">Click Me!</button>
     </form>
   </div>
