--- a/templates/index.html
+++ b/templates/index.html
@@ -140,7 +140,7 @@
       hem bugünkü hem de gelecek nesiller için hayati önem taşımaktadır.
     </p>
     <form action="/moreabout" method="post">
-        <button type="submit">Click Me!</button>
+        <button class="btn" type="submit">Su ile ilgili Şiire Git?</button>
     </form>
   </div>
 
