--- a/templates/page2.html
+++ b/templates/page2.html
@@ -78,8 +78,8 @@
     <p class="paragraph">
     </p>
     
-    <form action="/moreabout" method="post">
-        <button class="btn"type="submit">Click Me!</button>
+    <form action="/" method="post">
+        <button class="btn"type="submit">Geri Dön?</button>
     </form>
   </div>
 
