--- a/templates/page2.html
+++ b/templates/page2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Su Önemi</title>
+  <title>Su ile İlgili Şiir</title>
   <style>
     * {
       box-sizing: border-box;
