--- a/templates/index.html
+++ b/templates/index.html
@@ -139,8 +139,11 @@
       Ancak günümüzde su kaynakları hızla tükenmekte ve kirlenmektedir. Bu nedenle suyu tasarruflu kullanmak ve temiz tutmak, 
       hem bugünkü hem de gelecek nesiller için hayati önem taşımaktadır.
     </p>
-    <form action="/moreabout" method="post">
+    <form action="/siir" method="post">
         <button class="btn" type="submit">Su ile ilgili Şiire Git?</button>
+    </form>
+    <form action="/hikaye" method="post">
+        <button class="btn" type="submit">Su ile ilgili Hikayeye Git?</button>
     </form>
   </div>
 
