--- a/templates/index.html
+++ b/templates/index.html
@@ -154,8 +154,8 @@
     <div class="overlay">Merhaba!</div>
   </div>
 
-  <img src="static/left-image.png" alt="Left Decoration" class="side-image left">
-  <img src="static/right-image.png" alt="Right Decoration" class="side-image right">  
+  <img src="static/SuProje-Resim1.avif" alt="Left Decoration" class="side-image left">
+  <img src="static/SuProjesi-Resim2.jpg" alt="Right Decoration" class="side-image right">  
   
   <div class="content">
     <p class="paragraph">
