--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,7 @@
     }
 
     .side-image {
-      position: fixed;
+      position: static;
       top: 50%;
       width: 120px;
       height: auto;
