--- a/templates/index.html
+++ b/templates/index.html
@@ -102,14 +102,16 @@
     }
 
     .side-image {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      width: auto;
-      height: 80vh;
-      z-index: 1;
-      object-fit: contain;
-      pointer-events: none;
+      width: 200px;
+      height: 300px;
+      border: 1px solid black;
+      margin-bottom: 25px;
+    }
+
+    .side-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
     .side-image.left {
