--- a/templates/index.html
+++ b/templates/index.html
@@ -99,11 +99,13 @@
     }
 
     .side-image.left {
-      left: 10px;
+      left: 50px;
+      bottom: 100px;
     }
 
     .side-image.right {
-      right: 10px;
+      right: 50px;
+      bottom: 100px;
     }
 
     .side-image img {
@@ -161,6 +163,7 @@
       <p class="paragraph">
         Su kaynaklarının korunması için bireysel ve toplumsal farkındalığın artırılması gerekmektedir...
       </p>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdq4RRw67sfB514eEu9eYkpJb7WqIue4tVGNhIhNNnFJc7xPA/viewform?usp=dialog" class="btn">Ankete Giriniz?</a>
         <img src="{{ url_for('static', filename='SuProje-Resim1.avif') }}" alt="Sol süsleme resmi" class="side-image left">
         <img src="{{ url_for('static', filename='SuProjesi-Resim2.jpg') }}" alt="Sağ süsleme resmi" class="side-image right">
     </div>
