--- a/templates/index.html
+++ b/templates/index.html
@@ -94,16 +94,16 @@
       border: 1px solid black;
       position: absolute;
       top: 50%;
-      transform: translateY(-20%);
+      
       z-index: 1;
     }
 
     .side-image.left {
-      left: 50px;
+      left: 20%;
     }
 
     .side-image.right {
-      right: 50px;
+      right: 20%;
     }
 
     .side-image img {
