--- a/templates/page2.html
+++ b/templates/page2.html
@@ -9,6 +9,10 @@
       box-sizing: border-box;
     }
 
+    h3 {
+      text-align: left;
+    }
+
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       background-color: #9cd7ff;
@@ -38,6 +42,7 @@
     h1 {
       color: #007acc;
       margin-bottom: 20px;
+      text-align: center;
     }
 
     .btn {
@@ -75,12 +80,22 @@
 <body>
 
   <div class="content">
-    
-    
-    
     <form action="/" method="post">
         <button class="btn"type="submit">Geri Dön?</button>
     </form>
+  </div>
+
+  <div class="content">
+      <h1>AB-ı ruy</h1>
+      <h3>Ab gibi akarsın gönül şahrasında</h3>
+      <h3>Her katre bir sırdır dilden duada</h3>
+      <h3>Ahest düşersin taşır, koynuna</h3>
+      <h3>Ve taş dahi incinir, gönül şemasında</h3>
+      <br>
+      <h3>Su, ey ezeli hağme,</h3>
+      <h3>Gönlün gamını siler</h3>
+      <h3>Ruhun hararetini dindirir,</h3>
+      <h3>Kalbe şafa bahseder.</h3>
   </div>
 
 </body>
