--- a/templates/page2.html
+++ b/templates/page2.html
@@ -10,7 +10,11 @@
     }
 
     h3 {
-      text-align: left;
+      text-align: center;
+    }
+
+    .poet {
+      text-align: right;
     }
 
     body {
@@ -43,7 +47,7 @@
       color: #007acc;
       margin-bottom: 20px;
       text-align: center;
-    }
+    }AB-ı ruy
 
     .btn {
       display: inline-block;
@@ -96,6 +100,18 @@
       <h3>Gönlün gamını siler</h3>
       <h3>Ruhun hararetini dindirir,</h3>
       <h3>Kalbe şafa bahseder.</h3>
+      <br>
+      <h3>Ab olur umanana karışırsın,</h3>
+      <h3>Bahr olur, şemaya yansırsın,</h3>
+      <h3>Her damlan bir nefes,</h3>
+      <h3>her akışın bir hayat.</h3>
+      <br>
+      <h3>Bil ki sen</h3>
+      <h3>Hakk'ın en sessiz kelamısın,</h3>
+      <h3>Bir damlada cihan gizlenir</h3>
+      <h3>Ve cihanda bir damla eksik değildir</h3>
+      <br>
+      <h2 class="poet">-Taha Eren UŞAK</h2>
   </div>
 
 </body>
