--- a/templates/page2.html
+++ b/templates/page2.html
@@ -47,7 +47,7 @@
       color: #007acc;
       margin-bottom: 20px;
       text-align: center;
-    }AB-ı ruy
+    }
 
     .btn {
       display: inline-block;
@@ -67,6 +67,8 @@
 
     .btn:hover {
       background-color: #005f99;
+      transform: scale(1.3);
+      transition: 2s;
     }
 
     @media (max-width: 768px) {
