--- a/templates/page2.html
+++ b/templates/page2.html
@@ -52,6 +52,8 @@
     .btn {
       display: inline-block;
       background-color: #007acc;
+      transform: scale(1);      
+      transition: all 0.4s;
       color: white;
       padding: 12px 25px;
       border-radius: 25px;
@@ -67,8 +69,8 @@
 
     .btn:hover {
       background-color: #005f99;
-      transform: scale(1.3);
-      transition: 2s;
+      transform: scale(1.2);
+      transition: 0.4s;
     }
 
     @media (max-width: 768px) {
