--- a/templates/page2.html
+++ b/templates/page2.html
@@ -96,7 +96,8 @@
         margin: 30px 20px 60px 20px;
       }
 
-      h3, .paragraph {
+      h3 {
+        text-align: center;
         font-size: 1em;
       }
     }
