--- a/templates/page2.html
+++ b/templates/page2.html
@@ -50,6 +50,8 @@
     h3:nth-of-type(14) { animation-delay: 4.25s; }
     h3:nth-of-type(13) { animation-delay: 4.5s; }
     h3:nth-of-type(14) { animation-delay: 4.75s; }
+    h3:nth-of-type(15) { animation-delay: 5s; }
+    h3:nth-of-type(16) { animation-delay: 5.25s; }
     h2.poet { animation-delay: 8s; text-align: right; }
 
     @keyframes fadeIn {
