--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,13 @@
       line-height: 1.6;
       z-index: 2;
       position: relative;
+      animation: contentanim 2s forwards;
+    }
+
+    
+    @keyframes contentanim {
+        from {left: 200%;}
+        to {left: 0%;}
     }
 
     .paragraph {
