--- a/templates/index.html
+++ b/templates/index.html
@@ -69,6 +69,9 @@
         to {left: 0%;}
     }
 
+    content:nth-of-type(1) { animation-delay: 1s; }
+    content:nth-of-type(2) { animation-delay: 2s; }
+
     .paragraph {
       font-size: 1.1em;
       text-align: justify;
