--- a/templates/index.html
+++ b/templates/index.html
@@ -69,8 +69,8 @@
         to {left: 0%;}
     }
 
-    content:nth-of-type(1) { animation-delay: 1s; }
-    content:nth-of-type(2) { animation-delay: 2s; }
+    div.content:nth-of-type(1) { animation-delay: 1s; }
+    div.content:nth-of-type(2) { animation-delay: 2s; }
 
     .paragraph {
       font-size: 1.1em;
