--- a/templates/index.html
+++ b/templates/index.html
@@ -60,14 +60,20 @@
       line-height: 1.6;
       z-index: 2;
       position: relative;
-      animation: contentanim 2s forwards;
+      animation: contentanim1 2s forwards;
     }
 
     
-    @keyframes contentanim {
+    @keyframes contentanim1 {
         from {left: 200%;}
         to {left: 0%;}
     }
+
+    @keyframes contentanim1 {
+        from {right: 200%;}
+        to {right: 0%;}
+    }
+
 
     .paragraph {
       font-size: 1.1em;
