--- a/templates/page2.html
+++ b/templates/page2.html
@@ -137,5 +137,19 @@
       <h2 class="poet">-Taha Eren UŞAK</h2>
   </div>
 
+    <div class="content">
+      <h1>Ab ile Bahar</h1>
+      <h3>Ab-ı cuyda gülyaprağı yüzer</h3>
+      <h3>Rüzgar öper mehtapon süzer</h3>
+      <h3>Gönlümde o yaprak gibi soluk</h3>
+      <h3>Her bahar geçer,hüzün bende</h3>
+      <br>
+      <h3>Çiçek ağlar ab'dan uzakta</h3>
+      <h3>Toprak ağlar ab'dan uzakta</h3>
+      <h3>Ab kadar ulusu varmıdır cihanda</h3>
+      <h3>Bir Damlası için koşulur dört nala</h3>
+      <h2 class="poet">-Taha Eren UŞAK</h2>
+  </div>
+
 </body>
 </html>
