--- a/templates/page2.html
+++ b/templates/page2.html
@@ -151,5 +151,34 @@
       <h2 class="poet">-Taha Eren UŞAK</h2>
   </div>
 
+  <div class="content">
+      <h1>Cuy-ı Dil</h1>
+      <h3>Gözlerinden bir çuy akar,</h3>
+      <h3>Ab-ı hayat misali,</h3>
+      <h3>Her bakışın bir derya,</h3>
+      <h3>İçimde umman hali.</h3>
+      <br>
+      <h3>Ben bir damlayım,</h3>
+      <h3>Sen sonsuz bir deniz,/h3>
+      <h3>Göklerden düşerken asil sularına,</h3>
+      <h3>Bir yudum Ab-ı hayat olsan yeter bana</h3>
+      <h2 class="poet">-Taha Eren UŞAK</h2>
+  </div>
+
+  
+  <div class="content">
+      <h1>Selsebi-i Firkat</h1>
+      <h3>Selsebil akar gönül çayında</h3>
+      <h3>Her damla gam taşır derün-ı hayanda</h3>
+      <h3>Firkat rüzgarı savurur beni</h3>
+      <h3>Hüznüm olur ab sahyasında</h3>
+      <br>
+      <h3>Çeşme taşına düşer sessizce</h3>
+      <h3>Kütresinde gizli bin ab üsitab/h3>
+      <h3>Mehtab bakar mahsun gözlerime</h3>
+      <h3>Selsebil-i Firkat akar gözlerine</h3>
+      <h2 class="poet">-Taha Eren UŞAK</h2>
+  </div>
+
 </body>
 </html>
