--- a/templates/index.html
+++ b/templates/index.html
@@ -90,14 +90,16 @@
       text-decoration: none;
       font-weight: 600;
       font-size: 1rem;
-      transition: background-color 0.3s ease;
-      margin-top: 15px;
       box-shadow: 0 4px 8px rgba(0, 122, 204, 0.4);
       cursor: pointer;
       user-select: none;
+      
+      transition: transform 0.4s ease, background-color 0.3s ease;
+      transform: scale(1);
     }
 
     .btn:hover {
+      transform: scale(1.2);
       background-color: #005f99;
     }
 
