--- a/templates/page3.html
+++ b/templates/page3.html
@@ -39,7 +39,6 @@
       color: #007acc;
       margin-bottom: 20px;
     }
-
     .btn {
       display: inline-block;
       background-color: #007acc;
@@ -49,14 +48,16 @@
       text-decoration: none;
       font-weight: 600;
       font-size: 1rem;
-      transition: background-color 0.3s ease;
-      margin-top: 15px;
+      box-shadow: 0 4px 8px rgba(0, 122, 204, 0.4);
       cursor: pointer;
       user-select: none;
-      box-shadow: 0 4px 8px rgba(0, 122, 204, 0.4);
+      
+      transition: transform 0.4s ease, background-color 0.3s ease;
+      transform: scale(1);
     }
 
     .btn:hover {
+      transform: scale(1.2);
       background-color: #005f99;
     }
 
