--- a/templates/page2.html
+++ b/templates/page2.html
@@ -159,7 +159,7 @@
       <h3>İçimde umman hali.</h3>
       <br>
       <h3>Ben bir damlayım,</h3>
-      <h3>Sen sonsuz bir deniz,/h3>
+      <h3>Sen sonsuz bir deniz</h3>
       <h3>Göklerden düşerken asil sularına,</h3>
       <h3>Bir yudum Ab-ı hayat olsan yeter bana</h3>
       <h2 class="poet">-Taha Eren UŞAK</h2>
@@ -174,7 +174,7 @@
       <h3>Hüznüm olur ab sahyasında</h3>
       <br>
       <h3>Çeşme taşına düşer sessizce</h3>
-      <h3>Kütresinde gizli bin ab üsitab/h3>
+      <h3>Kütresinde gizli bin ab üsitab</h3>
       <h3>Mehtab bakar mahsun gözlerime</h3>
       <h3>Selsebil-i Firkat akar gözlerine</h3>
       <h2 class="poet">-Taha Eren UŞAK</h2>
